# extreme_reversal_engine

./: CMakeLists.txt  bayesian_optimizer.py  indicators.cpp  indicators.h  main.cpp  ml_optimizer.cpp  ml_optimizer.h  orderbook.cpp  orderbook.h  signal_detector.cpp  signal_detector.h  signal_receiver.py  test_single_stream.py  test_ws.cpp  trade_bridge.py  trade_metrics.py  websocket_client.cpp  websocket_client.h
